--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,9 +27,8 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - name: Build API
+      uses: registry.enigma.com.pl/openapi/tools:0.0.36
+      run: cd apigen \ make clean push-java MVN_OPTS="-s $(pwd)/../service/.mvn/settings.xml"
     - name: Build with Maven
       run: mvn -B package --file service/pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
