--- a/service/shop-domain-service/src/test/resources/application-test.properties
+++ b/service/shop-domain-service/src/test/resources/application-test.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.type=info
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=false
+logging.level.root=WARN
+logging.level.org.springframework=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
