--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>shop-domain-service</module>
+        <module>shop-domain-common</module>
     </modules>
 
     <properties>
