--- a/service/shop-domain-service/pom.xml
+++ b/service/shop-domain-service/pom.xml
@@ -31,6 +31,12 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.com.web.shop.domain</groupId>
+            <artifactId>shop-domain-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>
