--- a/service/pom.xml
+++ b/service/pom.xml
@@ -388,6 +388,12 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>2.2.7.RELEASE</version>
+            </dependency>
+
 <!--            <dependency>-->
 <!--                <groupId>org.junit</groupId>-->
 <!--                <artifactId>junit-bom</artifactId>-->
