--- a/service/shop-domain-service/src/main/resources/bootstrap.yml
+++ b/service/shop-domain-service/src/main/resources/bootstrap.yml
@@ -1,4 +1,13 @@
 spring:
+  cloud:
+    config:
+      fail-fast: true
+      uri: http://localhost:8888
+      name: shop-domain-service
+      username: root
+      password: password
+  profiles:
+    active: dev
   application.name: shop-domain-service
   jmx.enabled: false
   jpa:
@@ -27,3 +36,12 @@ spring:
     schemas[0]: ${spring.jpa.properties.hibernate.default_schema}
     baseline-on-migrate: true
     validateMigrationNaming: true
+eureka:
+  client:
+    service-url: {defaultZone: http://localhost:8761/eureka}
+    fetch-registry: true
+  instance:
+    lease-renewal-interval-in-seconds: 10
+logging:
+  level:
+    web: debug
