--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file service/pom.xml
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/develop' }}
     steps:
@@ -35,7 +36,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B compile --file service/pom.xml
+      run: mvn -B -DskipTests=true package --file service/pom.xml
     - name: Build the Docker image
       run: |
         echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
