--- a/service/shop-domain-service/src/main/resources/bootstrap.yml
+++ b/service/shop-domain-service/src/main/resources/bootstrap.yml
@@ -37,7 +37,7 @@ spring:
     validateMigrationNaming: true
 eureka:
   client:
-    service-url: {defaultZone: http://localhost:8761/eureka}
+    service-url: {defaultZone: http://shop-eureka:8761/eureka}
     fetch-registry: true
   instance:
     lease-renewal-interval-in-seconds: 10
