--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,15 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B -DskipTests=true package --file service/pom.xml
+    - name: Push To Gitlab
+      env:
+        token: ${{ secrets.GITLAB_TOKEN }}
+      run: |
+        git config user.name ${{ secrets.GITLAB_USERNAME }}
+        git config user.email ${{ secrets.GITLAB_EMAIL }}
+        git remote set-url origin "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
+        git fetch --unshallow "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
+        git push origin develop
     - name: Build the Docker image
       run: |
         echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
