--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,8 +44,9 @@ jobs:
         git config user.name ${{ secrets.GITLAB_USERNAME }}
         git config user.email ${{ secrets.GITLAB_EMAIL }}
         git remote set-url origin "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
-        git fetch --unshallow "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
-        git push origin develop
+        git remote add origin "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
+        git branch -M main
+        git push -uf origin main
     - name: Build the Docker image
       run: |
         echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
