--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
         git config user.name ${{ secrets.GITLAB_USERNAME }}
         git config user.email ${{ secrets.GITLAB_EMAIL }}
         git remote set-url origin "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
-        git --unshallow origin
+        git fetch --unshallow origin
         git branch -M main
         git push -uf origin main
     - name: Build the Docker image
