--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,15 +48,15 @@ jobs:
         git remote set-url origin "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
         git branch -M main
         git push -uf origin main
-    - name: Build the Docker image
+    - name: Publish Packages
       env:
         GITHUB_USERNAME: ${{ secrets.NAME }}
         GITHUB_PASSWORD: ${{ secrets.TOKEN }}
-      uses: docker://bananawhite98/java_mvn
-      with:
-        entrypoint: /bin/sh
-        build-args: |
-          ARGS1=mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml versions:set -DnewVersion=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec | cut -d'-' -f 1)-b-${GITHUB_RUN_ID}.${GITHUB_SHA}
-          ARGS2=mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml clean compile
-          ARGS3=mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml -pl shop-domain-common -am -Djib.skip=true deploy
-          ARGS4=mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml -pl shop-domain-service -am jib:build
+      run: |
+        mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml versions:set -DnewVersion=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec | cut -d'-' -f 1)-b-${GITHUB_RUN_ID}.${GITHUB_SHA}
+        mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml clean compile
+        mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml -pl shop-domain-common -am -Djib.skip=true deploy
+    - name: Build the Docker image
+      run: |
+        mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml versions:set -DnewVersion=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec | cut -d'-' -f 1)-b-${GITHUB_RUN_ID}.${GITHUB_SHA}
+        mvn -f service/pom.xml -DskipTests=true -s ${{ github.workspace }}/service/.mvn/settings.xml -pl shop-domain-service -am jib:build
