--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,6 +48,10 @@ jobs:
         git remote set-url origin "https://oauth2:${token}@gitlab.com/shop8671515/backend/shop-domain.git"
         git branch -M main
         git push -uf origin main
+    - name: Checkout Maven/JAVA
+      uses: docker://bananawhite98/java_mvn
+      with:
+        entrypoint: /bin/sh
     - name: Publish Packages
       env:
         GITHUB_USERNAME: ${{ secrets.NAME }}
