--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>pl.com.bit</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>pl.com.web.shop.domain</groupId>
@@ -65,6 +64,7 @@
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
         <versions-maven-plugin>2.5</versions-maven-plugin>
         <jackson.version>2.11.3</jackson.version>
+        <stack.common.version>1.0.0-SNAPSHOT</stack.common.version>
     </properties>
 
     <build>
@@ -511,9 +511,39 @@
             </dependency>
 
             <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>common-versioned-entity</artifactId>
+                <version>${stack.common.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>http-problem</artifactId>
+                <version>${stack.common.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>common</artifactId>
+                <version>${stack.common.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>common-api</artifactId>
+                <version>${stack.common.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>pl.com.web.shop.domain</groupId>
                 <artifactId>shop-domain-service</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>http-problem-spring-boot-starter</artifactId>
+                <version>${stack.common.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -530,6 +560,10 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>gitlab-maven</id>
+            <url>https://gitlab.com/api/v4/projects/45778457/packages/maven</url>
+        </repository>
     </repositories>
 
     <distributionManagement>
@@ -537,5 +571,10 @@
             <id>github</id>
             <url>https://maven.pkg.github.com/rszewczyk2204/shop-domain</url>
         </repository>
+
+        <snapshotRepository>
+            <id>gitlab-maven</id>
+            <url>https://gitlab.com/api/v4/projects/45778457/packages/maven</url>
+        </snapshotRepository>
     </distributionManagement>
 </project>
