--- a/service/shop-domain-service/pom.xml
+++ b/service/shop-domain-service/pom.xml
@@ -302,6 +302,12 @@
             <artifactId>http-problem-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
