--- a/service/pom.xml
+++ b/service/pom.xml
@@ -27,7 +27,7 @@
         <pmd-ruleset>${main.basedir}/pmd.xml</pmd-ruleset>
 
         <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
-        <spring-cloud.version>2020.0.0</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
 
         <docker-hub-image-name-prefix>registry.hub.docker.com/bananawhite98</docker-hub-image-name-prefix>
         <docker-image-name>shop-domain</docker-image-name>
@@ -64,7 +64,9 @@
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
         <versions-maven-plugin>2.5</versions-maven-plugin>
         <jackson.version>2.11.3</jackson.version>
-        <stack.common.version>1.0.0-SNAPSHOT</stack.common.version>
+        <stack.common.version>1.0.5-SNAPSHOT</stack.common.version>
+        <bit.user.version>1.0.0-b-893846818.b872da42</bit.user.version>
+        <junit.version>5.7.0</junit.version>
     </properties>
 
     <build>
@@ -375,7 +377,17 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>pl.com.bit.user</groupId>
+                <artifactId>user-snap-starter</artifactId>
+                <version>${bit.user.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
             <dependency>
                 <groupId>org.spockframework</groupId>
                 <artifactId>spock-bom</artifactId>
@@ -392,13 +404,13 @@
                 <scope>import</scope>
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>org.junit</groupId>-->
-<!--                <artifactId>junit-bom</artifactId>-->
-<!--                <version>${junit.version}</version>-->
-<!--                <type>pom</type>-->
-<!--                <scope>import</scope>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -512,18 +524,6 @@
 
             <dependency>
                 <groupId>pl.com.bit</groupId>
-                <artifactId>common-versioned-entity</artifactId>
-                <version>${stack.common.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>pl.com.bit</groupId>
-                <artifactId>http-problem</artifactId>
-                <version>${stack.common.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>pl.com.bit</groupId>
                 <artifactId>common</artifactId>
                 <version>${stack.common.version}</version>
             </dependency>
@@ -541,6 +541,36 @@
             </dependency>
 
             <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>common-feign</artifactId>
+                <version>${stack.common.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>common-named-object</artifactId>
+                <version>${stack.common.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>common-versioned-entity</artifactId>
+                <version>${stack.common.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>http-problem</artifactId>
+                <version>${stack.common.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>pl.com.web.shop.domain</groupId>
                 <artifactId>shop-domain-service</artifactId>
                 <version>${project.version}</version>
@@ -551,25 +581,34 @@
                 <artifactId>http-problem-spring-boot-starter</artifactId>
                 <version>${stack.common.version}</version>
             </dependency>
+            <dependency>
+                <groupId>pl.com.bit</groupId>
+                <artifactId>security-api-spring-boot-starter</artifactId>
+                <version>${stack.common.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <repositories>
         <repository>
+            <id>gitlab-maven</id>
+            <url>https://gitlab.com/api/v4/projects/46232141/packages/maven</url>
+        </repository>
+        <repository>
+            <id>user-maven</id>
+            <url>https://gitlab.com/api/v4/projects/46248359/packages/maven</url>
+        </repository>
+        <repository>
             <id>central</id>
             <url>https://repo1.maven.org/maven2/</url>
         </repository>
-        <repository>
-            <id>gitlab</id>
-            <url>https://maven.pkg.github.com/rszewczyk2204/shop-domain</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>gitlab-maven</id>
-            <url>https://gitlab.com/api/v4/projects/45778457/packages/maven</url>
-        </repository>
+
     </repositories>
 
     <distributionManagement>
@@ -577,10 +616,5 @@
             <id>github</id>
             <url>https://maven.pkg.github.com/rszewczyk2204/shop-domain</url>
         </repository>
-
-        <snapshotRepository>
-            <id>gitlab-maven</id>
-            <url>https://gitlab.com/api/v4/projects/45778457/packages/maven</url>
-        </snapshotRepository>
     </distributionManagement>
 </project>
